--- a/trunk/simulations-java/simulations/beers-law-lab/data/beers-law-lab/localization/beers-law-lab-strings_es.properties
+++ b/trunk/simulations-java/simulations/beers-law-lab/data/beers-law-lab/localization/beers-law-lab-strings_es.properties
@@ -1,5 +1,5 @@
-#beers-law-lab-strings_es_ES.properties created Mon May 14 21:46:46 COT 2012 using: beers-law-lab 1.01.00 (64146), translation-utility 2.13.00 (59150) dic 7, 2011
-#Mon May 14 21:46:46 COT 2012
+#beers-law-lab-strings_es.properties created Sun Dec 09 02:03:57 CET 2012 using: beers-law-lab 1.02.00 (64232), translation-utility 2.14.00 (69024) oct 9, 2012
+#Sun Dec 09 02:03:57 CET 2012
 copperSulfate=Sulfato de Cobre
 solution=Soluci\u00F3n
 concentration=Concentraci\u00F3n
@@ -10,7 +10,7 @@ units.molesPerLiter=mol/L
 potassiumDichromate=Dicromato de Potasio
 removeSolute=Remover Soluto
 solid=S\u00F3lido
-translation.credits=Por H\u00E9ctor R. MALLMA ALVARADO
+translation.credits="Concentraci\u00F3n"
 fixed=Fijo
 pattern.0percent={0}%
 none=Nada
