--- a/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_de.properties
+++ b/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_de.properties
@@ -1,40 +1,40 @@
-#circuit-construction-kit-strings_de.properties created Fri Dec 07 18:59:53 CET 2012 using: circuit-construction-kit 3.20.00 (53075), translation-utility 2.14.00 (69024) Okt 9, 2012
-#Fri Dec 07 18:59:53 CET 2012
+#circuit-construction-kit-strings_de.properties created Sun Dec 09 14:19:47 CET 2012 using: circuit-construction-kit 3.20.00 (53075), translation-utility 2.14.00 (69024) Okt 9, 2012
+#Sun Dec 09 14:19:47 CET 2012
 CCK3ControlPanel.HideElectronsCheckBox=Elektronen ausblenden
-CCK3ControlPanel.NonContactAmmeterCheckBox=<html>Kontaktloses<br>Amp\u00E8remeter</html>
-CCK3ControlPanel.ChangeViewButton=Vergr\u00F6\u00DFere 200x
-circuit-construction-kit-dc-virtual-lab.name=Stromkreis Baukasten (nur Gleichstrom), Virtuelles Labor
-CircuitComponentInteractiveGraphic.RemoveMenuItem=Entfernen
+CCK3ControlPanel.NonContactAmmeterCheckBox=<html>Kontaktloses<br>Amperemeter</html>
+CCK3ControlPanel.ChangeViewButton=Ansicht 200x
+circuit-construction-kit-dc-virtual-lab.name=Stromkreis Baukasten (Gleichstrom), virtuelles Labor
+CircuitComponentInteractiveGraphic.RemoveMenuItem=L\u00F6schen
 ComponentEditor.ResistorResistanceName=Widerstand
 BranchSource.Resistor=Widerstand
 CCK3ControlPanel.MediumRadioButton=Mittel
 GrabBag.PencilLead=Bleistiftmine
 CCK3ControlPanel.Enable=Mehr >>
-add.voltage=Diagramm Spannung
-CCKHelp.ToolboxHelp=Nimm Kabel und  weiteres Gegenst\u00E4nde aus der Toolbox
+add.voltage=Zeit-Spannungs-Diagramm
+CCKHelp.ToolboxHelp=Nimm Kabel und  weitere Bauteile aus der Werkzeugleiste.
 ComponentEditor.BulbResistanceTitle=Lampe
 edit.inductance=Induktivit\u00E4t \u00E4ndern
 henries=Henry
 CircuitComponentInteractiveGraphic.ShowValueMenuItem=Werte anzeigen
-GrabBagButton.DialogTitle=Grabbelkiste
+GrabBagButton.DialogTitle=T\u00FCte
 edit.capacitance=Kapazit\u00E4t \u00E4ndern
 CCK3ControlPanel.WireResistivitySliderMeasure=Widerstand/L\u00E4nge
-VirtualAmmeter.HelpString2=Stromst\u00E4rke messen
-VirtualAmmeter.HelpString1=Auf ein Kabel bewegen
+VirtualAmmeter.HelpString2=um Strom zu messen
+VirtualAmmeter.HelpString1=\u00DCber ein Kabel bewegen
 ComponentEditor.BatteryVoltageName=Volt
 OptionsMenu.Title=Optionen
 CircuitComponentInteractiveGraphic.VoltageMenuItem=Spannung \u00E4ndern
 discharge.inductor=Spule entladen
 CircuitComponentInteractiveGraphic.RightConnectMenuItem=Seitenkontakt rechts
 VirtualAmmeter.Amps=Ampere
+ConstantDensityPropagator.SpeedLimitReached2=\ % normal
 BranchSource.LightBulb=Gl\u00FChlampe
-ConstantDensityPropagator.SpeedLimitReached2=\ % normal\!
+ConstantDensityPropagator.SpeedLimitReached1=Maximale Geschwindigkeit erreicht\!\nSimulation reduziert auf
 BranchSource.Capacitor=Kondensator
-ConstantDensityPropagator.SpeedLimitReached1=Maximale Animationsgeschwindigkeit erreicht\!\nSimulationsgeschwindigkeit reduziert auf
 circuit-construction-kit-ac.name=Stromkreis Baukasten (Gleich- und Wechselstrom)
 CCK3ControlPanel.WireResistivitySlider=Kabelwiderstand
 BranchSource.Inductor=Spule
-change-frequency=\u00C4ndere die Frequenz
+change-frequency=Frequenz \u00E4ndern
 GrabBag.DollarBill=Geldschein
 ComponentEditor.BulbResistanceName=Widerstand
 CCK3Module.GrabAWire=Nimm ein Kabel
@@ -42,7 +42,7 @@ ReadoutGraphic.Ohms=Ohm
 BranchSource.AC=Wechselstrom
 JunctionSplitter.SplitMenuItem=Verbindung trennen
 CCK3ControlPanel.FilePanelBorder=Stromkreis
-GrabBagButton.ButtonTitle=Grabbelkiste
+GrabBagButton.ButtonTitle=Schau in die T\u00FCte
 ComponentEditor.BatteryVoltageUnits=Volt
 ComponentEditor.ACFrequency=Wechselstromfrequenz
 ReadoutGraphic.Volts=Volt
@@ -51,26 +51,29 @@ CCK3ControlPanel.HideValuesCheckBox=Werte ausblenden
 GrabBag.PaperClip=B\u00FCroklammer
 CCK3ControlPanel.LotsLabel=Gro\u00DF
 GrabBag.Penny=Geldst\u00FCck
-CCKHelp.ComponentHelp=Zum Verschieben zeihen oder zum Bearbeiten oder L\u00F6schen Rechtsklick.
+CCKHelp.ComponentHelp=Zum Bewegen ziehen oder\nRechtsklick zum Bearbeiten oder L\u00F6schen.
 discharge.capacitor=Kondensator entladen
-add.current.chart=Diagramm Stromst\u00E4rke
+add.current.chart=Zeit-Stromst\u00E4rke-Diagramm
 ComponentEditor.BatteryVoltageTitle=Batterie
 CCK3ControlPanel.ToolsPanelBorder=Messger\u00E4te
-CCKHelp.right-click-help=Rechtsklick f\u00FCr weitere Optionen
+CCKHelp.right-click-help=Rechtsklick f\u00FCr Optionen
 capacitance=Kapazit\u00E4t
 OptionsMenu.ToolboxColorDialogTitle=Farbe der Werkzeugleiste
 ComponentEditor.ResistorResistanceTitle=Widerstand
 CCK3ControlPanel.AmmeterCheckBox=Amperemeter
+ComponentEditor.Hz=Hz
 BranchSource.Wire=Kabel
 CCK3ControlPanel.SaveButton=Speichern
 BranchSource.Ammeter=Amperemeter
+CCK3ControlPanel.OhmsLawEquations=Ohm'sches Gesetz
 CCK3ControlPanel.LIfelikeRadioButton=Realistisch
 time=Zeit
 ReadoutGraphic.Farads=Farad
-CCK3ControlPanel.PhETToolTip=<html>Click to visit<br>the PhET webpage.</html>
+CCK3ControlPanel.PhETToolTip=<html>Klick zum Besuch der<br>the PhET Webseite.</html>
 CCK3ControlPanel.SchematicRadioButton=Schematisch
+ComponentEditor.DoneButton=Fertig
 OptionsMenu.BackgroundColorDialogTitle=Hintergrundfarbe
-CCK3ControlPanel.AdvancedControlsDialog=Erweiterte Einstellungen
+CCK3ControlPanel.AdvancedControlsDialog=Erweiterte M\u00F6glichkeiten
 CircuitComponentInteractiveGraphic.ResistanceMenuItem=Widerstand \u00E4ndern
 CCK3ControlPanel.VoltmeterCheckBox=Voltmeter
 CircuitComponentInteractiveGraphic.ReverseMenuItem=Umpolen
@@ -84,20 +87,20 @@ CCK3ControlPanel.ShowValuesCheckBox=Werte anzeigen
 CCK3ControlPanel.SmallRadioButton=Klein
 CircuitComponentInteractiveGraphic.LeftConnectMenuItem=Seitenkontakt links
 ReadoutGraphic.ACVolts=Volt
-ac.voltage.source.editor=Wechselspannungsquelle bearbeiten
-CCKHelp.right-click-help-mac=Strg+Klick f\u00FCr weitere Optionen
-reset.dynamics=Dynamik Zur\u00FCcksetzen
-CCK3ControlPanel.ShowXMLButton=XML anzeigen
-CCK3ControlPanel.CircuitEquationsFrame=Gleichungen
+ac.voltage.source.editor=Gleichstrom Spannungsqelle bearbeiten
+CCKHelp.right-click-help-mac=Strg und Klick f\u00FCr Optionen
+reset.dynamics=Dynamik zur\u00FCcksetzen
+CCK3ControlPanel.ShowXMLButton=Zeige XML
+CCK3ControlPanel.CircuitEquationsFrame=Stromkreis Gleichungen
 ComponentEditor.BatteryResistanceName=Innenwiderstand
 CCK3ControlPanel.CloseButton=Schlie\u00DFen
 farads=Farad
 CCK3ControlPanel.LoadButton=Laden
-CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=Innenwiderstand \u00E4ndern
+CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=Innennwiderstand \u00E4ndern
 current-y-axis=Stromst\u00E4rke in Ampere
-circuit-construction-kit-dc.name=Stromkreis Baukasten (nur Gleichstrom)
+circuit-construction-kit-dc.name=Stromkreis Baukasten (Gleichstrom)
 BranchSource.Battery=Batterie
-CCK3ControlPanel.VisualPanelBorder=Visuell
+CCK3ControlPanel.VisualPanelBorder=Darstellung
 SeriesAmmeterGraphic.Amps=Ampere
 SeriesAmmeterGraphic.Ammeter=Amperemeter
 OptionsMenu.BackgroundColorMenuItem=Hintergrundfarbe
@@ -110,13 +113,15 @@ ReadoutGraphic.Henries=Henry
 CCK3ControlPanel.Disable=Weniger <<
 BranchSource.Switch=Schalter
 CCK3ControlPanel.LargeRadioButton=Gro\u00DF
-circuit-construction-kit-ac-virtual-lab.name=Stromkreis Baukasten (Gleich- und Wechselstrom), Virtuelles Labor
-CCK3ControlPanel.AlmostNoneLabel=Fast Null
+circuit-construction-kit-ac-virtual-lab.name=Stromkreis Baukasten (Gleich- und Wechselstrom). virtuelles Labor
+CCK3ControlPanel.AlmostNoneLabel=Sehr klein
 ComponentEditor.BatteryResistanceTitle=Batterie
-WarningMessages.PossibleError=Achtung\: Einige Werte k\u00F6nnten fehlerhaft sein f\u00FCr diesen Stromkreis
-CCKHelp.JunctionHelp=Ziehe an den Verbindungen oder Rechtsklick f\u00FCr Men\u00FC.\n
+WarningMessages.PossibleError=Achtung\: Werte evtl. nicht korrekt f\u00FCr diesen Schaltkreis.
+CCKHelp.JunctionHelp=Verbindungen ziehen oder Rechtsklick f\u00FCr das Men\u00FC.
+ComponentEditor.Frequency=Frequenz
 GrabBag.Eraser=Radiergummi
 inductance=Induktivit\u00E4t
 InteractiveBranchGraphic.RemoveMenuItem=L\u00F6schen
+ComponentEditor.MoreVoltsCheckBox=Spannung erh\u00F6hen
 time.sec=Zeit in Sekunden
 GrabBag.Dog=Hund
