--- a/trunk/simulations-html/simulations/faraday/changes.txt
+++ b/trunk/simulations-html/simulations/faraday/changes.txt
@@ -1,3 +1,4 @@
+12/10/12 migrate types to common that have no dependencies
 12/10/12 revert move of DragHandler, things are screwed up
 12/10/12 move DragHandler to easel-phet
 12/10/12 rename templates/ -> html/
