--- a/simulations-html/simulations/faraday/TODO.txt
+++ b/simulations-html/simulations/faraday/TODO.txt
@@ -1,6 +1,7 @@
 TODO list for faraday
 
 HIGH:
+- resolve requirejs include problem
 - move stuff to simulations-html/common
 - handle window resize (see ESP:tab.onResize or concentration:main.onResize), scale vs world-bounds
 - improve tablet performance
