--- a/simulations-html/simulations/faraday/changes.txt
+++ b/simulations-html/simulations/faraday/changes.txt
@@ -1,3 +1,4 @@
+12/12/12 on browser window resize: resize canvas to fill window, move origin to center of canvas, update field visualization to fill canvas
 12/11/12 i18n of title
 12/10/12 comment out a log warning that was tanking performance
 12/10/12 migrate Property to common
