--- a/trunk/simulations-html/simulations/faraday/changes.txt
+++ b/trunk/simulations-html/simulations/faraday/changes.txt
@@ -1,3 +1,4 @@
+12/12/12 add Dec 2012 newsletter prototype analytics
 12/11/12 migrate ModelViewTransform2D and DragHandler to common
 12/11/12 integrate prototype dialog
 12/11/12 cache the part of the compass that doesn't change, to improve performance.
