--- a/trunk/simulations-java/simulations/energy-forms-and-changes/todo.txt
+++ b/trunk/simulations-java/simulations/energy-forms-and-changes/todo.txt
@@ -1,13 +1,13 @@
 
-Integrate bike with chain.
+Make everything turn on all the way when getting energy, taper as energy is reduced.  Max energy from generator and solar panel should be the same.
+
 Implement the dotted E's on the generator so that the E's never disappear.
 
-Make everything turn on all the way when getting energy, taper as energy is reduced.  Max energy from generator and solar panel should be the same.
 Make behavior change when E's are visible such that lights don't glow until they get energy, and so forth.
 
 Make the E's go all the way into and out of the bucket on the 1st tab.
 
-Improve steam shape
+Improve steam shape for tea pot
 
 No limits on heat and cool on both tab 1 & 2.
 Implement boiling and freezing of the water.
@@ -30,6 +30,7 @@ i18n
 Fix flicker when E's are transferred between energy systems
 
 
+DONE: Integrate bike with chain.
 DONE: Scale solar panel.
 DONE: Make some of the energy from the biker be thermal, have only this energy when she is biking by the solar panel.
 DONE: E's should build up in heat coil before going into beaker.
