--- a/trunk/simulations-java/simulations/fractions/changes.txt
+++ b/trunk/simulations-java/simulations/fractions/changes.txt
@@ -1,3 +1,4 @@
+# 1.02.01 (71282) Dec 12, 2012
 # 1.02.00 (69269) Oct 17, 2012
 > Fraction Matcher: Added a reset all button to the level selection screen
 # 1.01.38 (69254) Oct 16, 2012
