--- a/trunk/simulations-html/simulations/faraday/TODO.txt
+++ b/trunk/simulations-html/simulations/faraday/TODO.txt
@@ -1,6 +1,7 @@
 TODO list for faraday
 
 HIGH:
+- make crosshairs area of meter draggable
 - resolve requirejs include problem
 - improve tablet performance
 
