--- a/trunk/simulations-html/simulations/faraday/changes.txt
+++ b/trunk/simulations-html/simulations/faraday/changes.txt
@@ -1,3 +1,4 @@
+12/13/12 fill meter's crosshairs area with a transparent color, so that it's draggable in Easel
 12/12/12 add Dec 2012 newsletter prototype analytics
 12/11/12 migrate ModelViewTransform2D and DragHandler to common
 12/11/12 integrate prototype dialog
