--- a/simulations-html/simulations/faraday/changes.txt
+++ b/simulations-html/simulations/faraday/changes.txt
@@ -1,3 +1,4 @@
+12/13/12 right justify values in field meter
 12/13/12 add missing title to field meter
 12/13/12 fill meter's crosshairs area with a transparent color, so that it's draggable in Easel
 12/12/12 add Dec 2012 newsletter prototype analytics
