--- a/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
+++ b/simulations-java/simulations/fluid-pressure-and-flow/changes.txt
@@ -1,3 +1,4 @@
+> Fixed value for fluid density in English units.
 Addressed issues raised by the IntelliJ Inspection utility, see #3097
 Minor fixes & doc changes to prepare for code review, see #3097
 Removed unused function clampSensorPosition and usages, see #3097
